--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -1,4 +1,45 @@
-name: quick_verification.yml
+# .github/workflows/quick_verification.yml
+name: Quick Verification
+
+# Trigger only on push to deep-stress-test branch or manual dispatch
 on:
+  push:
+    branches:
+      - 'deep-stress-test'
+  workflow_dispatch:
 
 jobs:
+  quick-verification:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Setup Python 3.13
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.13'
+
+      - name: Install dependencies
+        run: |
+          python -m venv .venv
+          source .venv/bin/activate
+          pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Start API server in mock mode
+        run: |
+          source .venv/bin/activate
+          export BASE_URL="http://127.0.0.1:8000"
+          export VELTRAX_API_TOKEN="${{ secrets.VELTRAX_API_TOKEN }}"
+          export MOCK_LLM="1"
+          # Launch uvicorn in background
+          uvicorn api_server:app --host 127.0.0.1 --port 8000 --log-level info &
+          sleep 5
+
+      - name: Run quick cost-saving test
+        run: |
+          source .venv/bin/activate
+          export COST_SAVING_TEST="1"
+          export API_TOKEN="${{ secrets.VELTRAX_API_TOKEN }}"
+          python test/deep_stress/deep_stress_test.py
