CI Test (Branch - Quick Test & Deep Stress Test)

--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -3,8 +3,7 @@ name: Quick Verification
 
 on:
   push:
-    branches:
-      - deep-stress-test
+    branches: [ deep-stress-test ]
   workflow_dispatch:
 
 jobs:
@@ -12,8 +11,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Setup Python & install deps
         shell: pwsh
@@ -22,18 +20,18 @@ jobs:
           .\.venv\Scripts\Activate.ps1
           pip install -r requirements.txt
 
-      - name: Start mock server in background
+      - name: Start mock server (background)
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
           $Env:BASE_URL = "http://127.0.0.1:8000"
           $Env:VELTRAX_API_TOKEN = "${{ secrets.VELTRAX_API_TOKEN }}"
           $Env:MOCK_LLM = "1"
-          # launch uvicorn as a background job
+          # use venv python explicitly
           Start-Job -ScriptBlock {
-            python -m uvicorn api_server:app --host 127.0.0.1 --port 8000 --log-level info
+            & ".\.venv\Scripts\python.exe" -m uvicorn api_server:app --host 127.0.0.1 --port 8000 --log-level info
           }
-          Start-Sleep -Seconds 10
+          Start-Sleep -Seconds 10   # wait for server to be up
 
       - name: Run quick cost-saving test
         shell: pwsh
