--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -10,43 +10,43 @@ jobs:
   quick-verification:
     runs-on: windows-latest
 
+    # 全局环境变量，跨 step 保持一致
+    env:
+      BASE_URL: "http://127.0.0.1:8000"
+      VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
+      MOCK_LLM: "1"
+      COST_SAVING_TEST: "1"
+      API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      # ---------- Key changes: explicitly install Python 3.11 or later ----------
-      - name: Setup Python 3.11
+      - name: Set up Python 3.11
         uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
-          architecture: 'x64'
+          python-version: "3.11"
+          architecture: "x64"
 
       - name: Create venv & install dependencies
         shell: pwsh
         run: |
-          python -m venv .venv --upgrade-deps          
+          python -m venv .venv --upgrade-deps
           .\.venv\Scripts\Activate.ps1
           pip install -r requirements.txt
 
-      - name: Start mock server in background
+      - name: Start mock server (background)
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          $Env:BASE_URL          = "http://127.0.0.1:8000"
-          $Env:VELTRAX_API_TOKEN = "${{ secrets.VELTRAX_API_TOKEN }}"
-          $Env:MOCK_LLM          = "1"
-
-          # 启动 uvicorn，显式使用 venv 中的 python.exe
-          $venvPy = Join-Path $PWD '.venv\Scripts\python.exe'
-          Start-Process -FilePath $venvPy `
+          # 用 venv 中的 python 启动 uvicorn
+          Start-Process -FilePath ".\.venv\Scripts\python.exe" `
                         -ArgumentList "-m","uvicorn","api_server:app","--host","127.0.0.1","--port","8000","--log-level","info" `
                         -NoNewWindow
-          Start-Sleep -Seconds 10   # Wait for the service to fully start
+          Start-Sleep -Seconds 10
 
       - name: Run quick cost-saving test
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          $Env:COST_SAVING_TEST = "1"
-          $Env:API_TOKEN        = "${{ secrets.VELTRAX_API_TOKEN }}"
           python .\test\deep_stress\deep_stress_test.py
