--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -1,4 +1,3 @@
-# .github/workflows/quick_verification.yml
 name: Quick Verification
 
 on:
@@ -10,25 +9,24 @@ jobs:
   quick-verification:
     runs-on: windows-latest
 
-    # 全局环境变量，跨 step 保持一致
     env:
-      BASE_URL:       "http://127.0.0.1:8000"
+      BASE_URL:          "http://127.0.0.1:8000"
       VELTRAX_API_TOKEN: ${{ secrets.VELTRAX_API_TOKEN }}
-      MOCK_LLM:       "1"
-      COST_SAVING_TEST: "1"
-      API_TOKEN:      ${{ secrets.VELTRAX_API_TOKEN }}
+      MOCK_LLM:          "1"
+      COST_SAVING_TEST:  "1"
+      API_TOKEN:         ${{ secrets.VELTRAX_API_TOKEN }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Python 3.11
+      - name: Setup Python
         uses: actions/setup-python@v4
         with:
           python-version: "3.11"
           architecture: "x64"
 
-      - name: Create venv & install dependencies
+      - name: Create venv & install deps
         shell: pwsh
         run: |
           cd ${{ github.workspace }}
@@ -36,17 +34,16 @@ jobs:
           .\.venv\Scripts\Activate.ps1
           pip install -r requirements.txt
 
-      - name: Start mock server in background
+      - name: Launch Uvicorn server
         shell: pwsh
         run: |
           cd ${{ github.workspace }}
           .\.venv\Scripts\Activate.ps1
-          # Start Uvicorn in the background
-          Start-Job -ScriptBlock {
-            & .\.venv\Scripts\python.exe -m uvicorn api_server:app `
-              --host 127.0.0.1 --port 8000 --log-level info
-          }
-          # Waiting for the service to be fully ready
+          # Started with Start-Process, will not exit with the current step
+          $uv = Start-Process -FilePath .\.venv\Scripts\python.exe `
+               -ArgumentList "-m uvicorn api_server:app --host 127.0.0.1 --port 8000 --log-level info" `
+               -NoNewWindow -PassThru
+          # Wait for the service to start
           Start-Sleep -Seconds 10
 
       - name: Run quick cost-saving test
@@ -55,3 +52,9 @@ jobs:
           cd ${{ github.workspace }}
           .\.venv\Scripts\Activate.ps1
           python .\test\deep_stress\deep_stress_test.py
+
+      - name: Tear down server
+        shell: pwsh
+        run: |
+          # Stop the background Uvicorn process
+          Stop-Process -Id $uv.Id -Force
