CI Test (Branch - Quick Test & Deep Stress Test)

--- a/.github/workflows/quick_verification.yml
+++ b/.github/workflows/quick_verification.yml
@@ -9,10 +9,6 @@ on:
 jobs:
   quick-verification:
     runs-on: windows-latest
-    defaults:
-      run:
-        # Set working directory to the inner project folder where api_server.py lives
-        working-directory: GeniusTrail
 
     env:
       PYTHONUTF8: '1'
@@ -32,7 +28,7 @@ jobs:
           python-version: '3.13'
           architecture: 'x64'
 
-      - name: Initialize virtual environment and install dependencies
+      - name: Initialize venv & install deps
         shell: pwsh
         run: |
           python -m venv .venv
@@ -41,19 +37,14 @@ jobs:
           pip install httpx uvicorn fastapi prometheus_client
           pip install -r requirements.txt
 
-      - name: Launch Uvicorn server in background
+      - name: Launch Uvicorn server
         shell: pwsh
         run: |
           .\.venv\Scripts\Activate.ps1
-          # Start the server using the venv python and redirect logs for debugging
           Start-Process -FilePath .\.venv\Scripts\python.exe `
                         -ArgumentList "-m","uvicorn","api_server:app","--host","127.0.0.1","--port","8000","--log-level","info" `
-                        -RedirectStandardOutput uvicorn.log -RedirectStandardError uvicorn.log `
-                        -WindowStyle Hidden -PassThru | Out-Null
-          # Wait for the server to fully start
+                        -WindowStyle Hidden | Out-Null
           Start-Sleep -Seconds 8
-          # Output server logs to verify startup
-          Get-Content uvicorn.log
 
       - name: Run quick cost-saving test
         shell: pwsh
