--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,4 @@
 [pytest]
-pythonpath = .
-testpaths    = test
+addopts = -q -p no:pytest_asyncio
+testpaths = test
 python_files = test_*.py
-markers =
-    integration: mark integration tests
-cache_dir    = .pytest_cache
-addopts      = -q
