--- a/.github/workflows/secret_scan.yml
+++ b/.github/workflows/secret_scan.yml
@@ -8,8 +8,13 @@ jobs:
   gitleaks:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3      # 默认 fetch-depth: 1
+      # Fetch the full Git history (by default only fetch-depth:1 will cause revision range parsing to fail)
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
       - name: Run Gitleaks
         uses: gitleaks/gitleaks-action@v2
         with:
-          args: "--path=. --verbose"
+          # v2 uses flags instead of args
+          flags: "--path=. --verbose"
