--- a/.github/workflows/json-schema-regression.yml
+++ b/.github/workflows/json-schema-regression.yml
@@ -4,17 +4,10 @@ on:
   push:
     branches:
       - 'main'
-    paths:
-      - 'test/test_json_schema_regression.py'
-      - 'openapi_schema.json'
-      - 'requirements.txt'
   pull_request:
     branches:
       - 'main'
-    paths:
-      - 'test/test_json_schema_regression.py'
-      - 'openapi_schema.json'
-      - 'requirements.txt'
+  workflow_dispatch:
 
 jobs:
   contract-test:
