--- a/.github/workflows/soak_locust_1m.yml
+++ b/.github/workflows/soak_locust_1m.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install prometheus_client httpx fastapi uvicorn python-dotenv
+          pip install prometheus_client httpx fastapi uvicorn python-dotenv locust
 
       - name: Start API server
         run: |
