--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,7 @@
 addopts = -q -p no:pytest_asyncio
 testpaths = test
 python_files = test_*.py
+markers =
+    integration: mark tests as integration tests requiring external services
+filterwarnings =
+    ignore::DeprecationWarning:pytest_assertion_rewrite
