--- a/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
+++ b/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
@@ -14,11 +14,9 @@ jobs:
       matrix:
         python-version: [ "3.13.5" ]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
-      - name: Setup Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -26,33 +24,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install fakeredis
-    outputs:
-      python-version: ${{ matrix.python-version }}
+          pip install fakeredis pytest      # ← 新增 pytest 安装
 
   fault_injection:
     name: Fault Injection Tests
     needs: setup_and_install
     runs-on: ubuntu-latest
     steps:
-      - name: Run Fault Injection suite
-        run: python -m pytest test/integration/test_fault_injection.py
+      - run: python -m pytest test/integration/test_fault_injection.py
 
   dast_scan:
     name: DAST Scan Tests
     needs: setup_and_install
     runs-on: ubuntu-latest
     steps:
-      - name: Run DAST Scan suite
-        run: python -m pytest test/integration/test_dast_scan.py
+      - run: python -m pytest test/integration/test_dast_scan.py
 
   synthetic_monitoring:
     name: Synthetic Monitoring Tests
     needs: setup_and_install
     runs-on: ubuntu-latest
     steps:
-      - name: Run Synthetic Monitoring suite
-        run: python -m pytest test/integration/test_synthetic_alerting.py
+      - run: python -m pytest test/integration/test_synthetic_alerting.py
 
   upload-artifacts:
     name: Upload Integration Test Results
@@ -63,9 +56,7 @@ jobs:
       - synthetic_monitoring
     runs-on: ubuntu-latest
     steps:
-      - name: Upload pytest logs
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
         with:
           name: integration-logs
-          path: |
-            **/pytest*.xml
+          path: '**/pytest*.xml'
