--- a/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
+++ b/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
@@ -7,16 +7,19 @@ on:
     branches: [ main ]
 
 jobs:
-  setup_and_install:
-    name: Setup & Install Dependencies
+  integration:
+    name: Backend Integration Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
         python-version: [ "3.13.5" ]
-    steps:
-      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v4
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Setup Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
 
@@ -24,39 +27,21 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          pip install fakeredis pytest      # ← 新增 pytest 安装
+          pip install fakeredis pytest
 
-  fault_injection:
-    name: Fault Injection Tests
-    needs: setup_and_install
-    runs-on: ubuntu-latest
-    steps:
-      - run: python -m pytest test/integration/test_fault_injection.py
+      - name: Run Fault Injection suite
+        run: python -m pytest test/integration/test_fault_injection.py
 
-  dast_scan:
-    name: DAST Scan Tests
-    needs: setup_and_install
-    runs-on: ubuntu-latest
-    steps:
-      - run: python -m pytest test/integration/test_dast_scan.py
+      - name: Run DAST Scan suite
+        run: python -m pytest test/integration/test_dast_scan.py
 
-  synthetic_monitoring:
-    name: Synthetic Monitoring Tests
-    needs: setup_and_install
-    runs-on: ubuntu-latest
-    steps:
-      - run: python -m pytest test/integration/test_synthetic_alerting.py
+      - name: Run Synthetic Monitoring suite
+        run: python -m pytest test/integration/test_synthetic_alerting.py
 
-  upload-artifacts:
-    name: Upload Integration Test Results
-    if: always()
-    needs:
-      - fault_injection
-      - dast_scan
-      - synthetic_monitoring
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/upload-artifact@v4
+      - name: Upload Integration Test Results
+        if: always()
+        uses: actions/upload-artifact@v4
         with:
           name: integration-logs
-          path: '**/pytest*.xml'
+          path: |
+            **/pytest*.xml
