CI Test (Backend)

--- a/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
+++ b/.github/workflows/integration_fault_injection_dast_scan_synthetic_monitoring.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   integration:
-    name: Backend Integration Tests
+    name: Fault Injection, DAST Scan & Synthetic Monitoring Tests
     runs-on: ubuntu-latest
     strategy:
       matrix:
