--- a/.github/workflows/performance_security_gate.yml
+++ b/.github/workflows/performance_security_gate.yml
@@ -2,42 +2,44 @@
 name: CI: Performance & Dependency Security Gate
 
 on:
+  workflow_dispatch:
   push:
     branches:
       - main
+      - master
   pull_request:
     branches:
       - main
-  workflow_dispatch:
+      - master
 
 jobs:
-  perf-sec-gate:
+  performance_security_gate:
     name: Performance & Dependency Security Gate
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Set up Go (for hey)
+      - name: Set up Go environment
         uses: actions/setup-go@v4
         with:
           go-version: '1.21'
 
-      - name: Install hey
+      - name: Install hey load test tool
         run: |
           go install github.com/rakyll/hey@latest
           echo "$HOME/go/bin" >> $GITHUB_PATH
 
-      - name: Install Python & Semgrep
+      - name: Install Semgrep scanner
         run: |
           sudo apt-get update
           sudo apt-get install -y python3-pip
           python3 -m pip install --user semgrep
           echo "$HOME/.local/bin" >> $GITHUB_PATH
 
-      - name: Performance Regression Test
+      - name: Run Performance Regression Test
         run: bash scripts/performance_regression.sh
 
-      - name: Dependency Security Block Test
+      - name: Run Dependency Security Scan
         run: bash scripts/dependency_scan.sh
